# WP6_QNLP

./: .gitignore  CODE_OF_CONDUCT.md  LIBTEMPLATE.md  README.md  README_Merged.md  README_developers.md  pre_alpha_benchmarking.py  pull_request_template.md  pyproject.toml  requirements.txt  requirements_poetry_cleaned.txt  requirements_poetry_minimal.txt  run_pre_alpha_benchmarking.py  setup.py
.github/workflows/: ci_macos.yml  macos_ci.yml  python-app.yml  sphinx_doc.yml
.pytest_cache/v/cache/: nodeids
QNLP_lib/src/ClassicalNLP/: .gitignore
QNLP_lib/src/DataPreparation/: README.md
QNLP_lib/src/Quantum/: Optimizer.py  loader.py
doc/: conf.py  index.rst
docs_sphinx/source/: README.md  conf.py  index.rst
misc/: ~$LP_resources.docx
misc/notebooks/: Dataset_example.ipynb  README.md  Single_sentence_example.ipynb
misc/notebooks/.ipynb_checkpoints/: Dataset_example-checkpoint.ipynb  README-checkpoint.md
misc/notebooks/classical/: Classical_classifiers.ipynb
my_lib/: test_my_lib.py
my_lib/Alpha/DressedQuantumCircuit/: Dressed_QNLP_demo.ipynb  Processing text data with quantum computers webinar .pptx  Readme.md  requirements.txt
my_lib/src/DataPreparation/: gen_animal_dataset.py
neasqc_wp61/: 6_Beta.sh  6_Beta_Neighbours.sh  6_Classify_With_Quantum_Model.sh  7_EvaluateResults.sh  alpha_benchmarking.py  pre_alpha_benchmarking.py  pylint.rc  run_pre_alpha_benchmarking.py  use_pre_alpha.py
neasqc_wp61/benchmarking/: alpha_benchmarking.py  hyperparam_generation.py  pre_alpha_benchmarking.py  run_pre_alpha_benchmarking.py
neasqc_wp61/benchmarking/data_processing/: VectorizerConnector.py
neasqc_wp61/benchmarking/hpc/: benchmark_params.txt  generate_slurm_scripts.py  submit_jobs.sh
neasqc_wp61/benchmarking/results_processing/: plot_beta_experiment.py  plot_multiple_experiments_results.py  plot_single_experiments_results.py  plotting_tool.py
neasqc_wp61/data/: dataset_vectorized_fasttext.json
neasqc_wp61/data/data_processing/: Pre_alpha_dataset.py  amazon_review_dataset_processing.py  combine_json_files.py  compute_metrics_logs.py  dataset_vectoriser.py  diagrams_reduced_amazonreview_test.pickle  gen_train_test_split_json.py  generate_pre_alpha_dataset.py  pre_alpha_reduced_dataset.py  save_diagrams_amazonreview.py  save_json_output.py  use_alpha.py  use_alpha_1_2.py  use_alpha_3.py  use_alpha_3_multiclass.py  use_alpha_lambeq.py  use_alpha_pennylane.py  use_beta_1.py  use_beta_1_bert.py  use_beta_neighbors.py  use_beta_neighbours.py  use_beta_neighbours_with_bert.py  use_classical_beta_neighbors.py  use_classical_neighbors.py  use_generate_pre_alpha_dataset.py  use_pre_alpha.py  use_pre_alpha_1.py  use_pre_alpha_2.py  use_pre_alpha_lambeq.py  use_pre_alpha_reduced_dataset.py  use_save_diagrams.py
neasqc_wp61/data/datasets/: Complete_dataset.json  Reduced_words_complete_dataset.json  Reduced_words_transitive_dataset.json  amazon_filtered_dataset.json  amazon_filtered_dictionary.json  amazon_pre_alpha_test.tsv  amazon_pre_alpha_train.tsv  amazonreview_pre_alpha_filtered_test.tsv  amazonreview_pre_alpha_filtered_train.tsv  amazonreview_reduced_train_pre_alpha.json  dataset_vectorized_bert_cased.json  dataset_vectorized_bert_uncased.json  diagrams_reduced_amazonreview_pre_alpha_test.pickle  diagrams_reduced_amazonreview_test.pickle  diagrams_reduced_amazonreview_train.pickle  diagrams_reduced_amazonreview_val.pickle  diagrams_toy_dataset_test.pickle  diagrams_toy_dataset_train.pickle  reduced_amazon_filtered_dataset.json  reduced_amazon_filtered_dictionary.json  reduced_amazonreview_pre_alpha_dev.tsv  reduced_amazonreview_pre_alpha_test.tsv  reduced_amazonreview_pre_alpha_train.tsv  reduced_amazonreview_test.tsv  reduced_amazonreview_train.tsv  reduced_amazonreview_val.tsv
neasqc_wp61/data/toy_dataset/: toy_dataset_bert_word_embedding_test.csv  toy_dataset_multiclass_bert_sentences_test.csv  toy_dataset_multiclass_bert_sentences_train.csv  toy_dataset_multiclass_bert_words_test.csv  toy_dataset_test.tsv  toy_dataset_train.tsv
neasqc_wp61/doc/: QNLP_resources.docx
neasqc_wp61/doc/tutorials/: Classical_classifiers.ipynb  Dataset_example.ipynb  requirements.txt  (+6 more)
neasqc_wp61/tutorials/: Dataset_example-checkpoint.ipynb  Dataset_example.ipynb  Single_sentence_example.ipynb  dataset_example_seeded.py
neasqc_wp61/unknown/: .dockerignore_FastTextVectorizer  __init__.py  pylint.rc
tests/: dim_reduction_t.py  quantum_distance_t.py  test_add_predictions_to_logs.py  test_alpha_3.py  test_alpha_3_4_utils.py  test_alpha_4.py  test_amazon_review_dataset_processing.py  test_beta_1.py  test_beta_2.py  test_circuit.py  test_dim_reduction.py  test_embedder.py  test_my_lib.py  test_pre_alpha_2.py  test_quantum_distance.py  unit_test_sample.py
tests/benchmarking/: README.md
tests/unit tests/: README.md
(+171 files in other folders)
