[tool.poetry]
name = "WP6_QNLP"
version = "0.3.0"
description = "The repository of the quantum natural language processing WP6 within NEASQC. Development and releases are stored in this repository."
authors = [
    "Richard Wolf <richard.wolf@ichec.ie>",
    "Conor Dune <conor.dunne@ichec.ie>",
    "Pablo Suarez <pablo.suarez@ichec.ie>"]
readme = "README.md"
repository = "https://github.com/NEASQC/WP6_QNLP"
packages = [
     {include = "module", from = "./neasqc_wp61/models/quantum/alpha/"}
    ]


[tool.poetry.dependencies]
python = "~3.10"
pandas = "==1.5.1"
numpy = "==1.23.4"
matplotlib = "==3.6.1"
myqlm = "==1.5.1"
scipy = "==1.9.3"
scikit-learn = "==1.1.3"
discopy = "==0.4.3"
lambeq = "==0.2.7"
pytket = "~1.13.0"
pytket_qiskit = "==0.37.0"
sympy = "==1.11.1"
torch = "~1.12.0"
tensorflow = {version = "==2.10.0", markers = "platform_machine != 'arm64'"}
tensorflow-macos = {version = "==2.10.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
tensorflow-metal = {version = "==0.6.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx  = "==4.2.0"
sphinx-rtd-theme =  "==1.0.0"
myst-parser = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"